--- a/css/main.css
+++ b/css/main.css
@@ -12,5 +12,20 @@
     margin-left: 35%;
 }
 
-
+.font-1 {
+    font-family : 'Karma', serif;
+  }
+  
+  .font-2 {
+    font-family : 'Raleway', sans-serif ;
+  }
+  
+  .font-3 {
+    font-family: 'Indie Flower', cursive;
+  }
+  
+  .font-4 {
+    font-family : 'Coiny', cursive ;
+  }
+  
 
